<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundColor">

    <ImageButton
        android:id="@+id/useLastHistoryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="@string/last_history_cd"
        android:paddingEnd="@dimen/corner_icon_padding"
        android:paddingBottom="@dimen/corner_icon_padding"
        android:src="@drawable/ic_download"
        app:layout_constraintBottom_toTopOf="@id/mainText"
        app:layout_constraintEnd_toStartOf="@id/historyButton"
        app:tint="?colorPrimary"
        tools:ignore="RtlSymmetry" />

    <ImageButton
        android:id="@+id/historyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="@string/history_cd"
        android:paddingEnd="@dimen/corner_icon_padding"
        android:paddingBottom="@dimen/corner_icon_padding"
        android:src="@drawable/ic_history"
        app:layout_constraintBottom_toTopOf="@id/mainText"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="?colorPrimary"
        tools:ignore="RtlSymmetry" />

    <!-- Text where input and computed values are displayed -->
    <TextView
        android:id="@+id/mainText"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_numpad_background"
        android:paddingHorizontal="10dp"
        android:scrollbars="vertical"
        android:textColor="?colorOnPrimary"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/errorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:textColor="?errorColor"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/mainText" />

    <!-- All number and operator buttons -->
    <GridLayout
        android:id="@+id/numpadLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:columnCount="4"
        android:rowCount="6"
        android:useDefaultMargins="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/errorText">

        <Button
            android:id="@+id/oneButton"
            style="@style/NumpadButton"
            android:layout_row="0"
            android:layout_column="0"
            android:background="@drawable/button_numpad_background"
            android:text="@string/one" />

        <Button
            android:id="@+id/twoButton"
            style="@style/NumpadButton"
            android:layout_row="0"
            android:layout_column="1"
            android:background="@drawable/button_numpad_background"
            android:text="@string/two" />

        <Button
            android:id="@+id/threeButton"
            style="@style/NumpadButton"
            android:layout_row="0"
            android:layout_column="2"
            android:background="@drawable/button_numpad_background"
            android:text="@string/three" />

        <Button
            android:id="@+id/fourButton"
            style="@style/NumpadButton"
            android:layout_row="1"
            android:layout_column="0"
            android:background="@drawable/button_numpad_background"
            android:text="@string/four" />

        <Button
            android:id="@+id/fiveButton"
            style="@style/NumpadButton"
            android:layout_row="1"
            android:layout_column="1"
            android:background="@drawable/button_numpad_background"
            android:text="@string/five" />

        <Button
            android:id="@+id/sixButton"
            style="@style/NumpadButton"
            android:layout_row="1"
            android:layout_column="2"
            android:background="@drawable/button_numpad_background"
            android:text="@string/six" />

        <Button
            android:id="@+id/sevenButton"
            style="@style/NumpadButton"
            android:layout_row="2"
            android:layout_column="0"
            android:background="@drawable/button_numpad_background"
            android:text="@string/seven" />

        <Button
            android:id="@+id/eightButton"
            style="@style/NumpadButton"
            android:layout_row="2"
            android:layout_column="1"
            android:background="@drawable/button_numpad_background"
            android:text="@string/eight" />

        <Button
            android:id="@+id/nineButton"
            style="@style/NumpadButton"
            android:layout_row="2"
            android:layout_column="2"
            android:background="@drawable/button_numpad_background"
            android:text="@string/nine" />

        <Button
            android:id="@+id/zeroButton"
            style="@style/NumpadButton"
            android:layout_row="3"
            android:layout_column="0"
            android:background="@drawable/button_numpad_background"
            android:text="@string/zero" />

        <ImageButton
            android:id="@+id/plusButton"
            style="@style/NumpadButton.Image"
            android:layout_row="0"
            android:layout_column="3"
            android:background="@drawable/button_numpad_background"
            android:contentDescription="@string/plus_cd"
            android:src="@drawable/ic_plus" />

        <ImageButton
            android:id="@+id/minusButton"
            style="@style/NumpadButton.Image"
            android:layout_row="1"
            android:layout_column="3"
            android:background="@drawable/button_numpad_background"
            android:contentDescription="@string/minus_cd"
            android:src="@drawable/ic_minus" />

        <ImageButton
            android:id="@+id/timesButton"
            style="@style/NumpadButton.Image"
            android:layout_row="2"
            android:layout_column="3"
            android:background="@drawable/button_numpad_background"
            android:contentDescription="@string/times_cd"
            android:src="@drawable/ic_times" />

        <ImageButton
            android:id="@+id/divideButton"
            style="@style/NumpadButton.Image"
            android:layout_row="3"
            android:layout_column="3"
            android:background="@drawable/button_numpad_background"
            android:contentDescription="@string/divide_cd"
            android:src="@drawable/ic_divide" />

        <Button
            android:id="@+id/lparenButton"
            style="@style/NumpadButton"
            android:layout_row="3"
            android:layout_column="1"
            android:background="@drawable/button_numpad_background"
            android:text="@string/lparen" />

        <Button
            android:id="@+id/rparenButton"
            style="@style/NumpadButton"
            android:layout_row="3"
            android:layout_column="2"
            android:background="@drawable/button_numpad_background"
            android:text="@string/rparen" />

        <Button
            android:id="@+id/decimalButton"
            style="@style/NumpadButton"
            android:layout_row="4"
            android:layout_column="0"
            android:background="@drawable/button_numpad_background"
            android:text="@string/decimal" />

        <ImageButton
            android:id="@+id/backspaceButton"
            style="@style/NumpadButton.Image"
            android:layout_row="4"
            android:layout_column="1"
            android:background="@drawable/button_numpad_background"
            android:contentDescription="@string/backspace_cd"
            android:src="@drawable/ic_arrow_left" />

        <Button
            android:id="@+id/clearButton"
            style="@style/NumpadButton"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_gravity="top"
            android:background="@drawable/button_numpad_background"
            android:text="@string/clear"
            android:textSize="20sp" />

        <Button
            android:id="@+id/expButton"
            style="@style/NumpadButton"
            android:layout_row="4"
            android:layout_column="3"
            android:layout_gravity="top"
            android:background="@drawable/button_numpad_background"
            android:text="@string/exp" />

        <ImageButton
            android:id="@+id/equalsButton"
            style="@style/NumpadButton.Image"
            android:layout_row="5"
            android:layout_column="3"
            android:background="@drawable/button_numpad_background"
            android:contentDescription="@string/equals_cd"
            android:src="@drawable/ic_equals" />

        <Button
            android:id="@+id/piButton"
            style="@style/NumpadButton"
            android:layout_row="5"
            android:layout_column="2"
            android:layout_gravity="top"
            android:background="@drawable/button_numpad_background"
            android:enabled="false"
            android:text="@string/pi"
            android:textSize="20sp"
            android:visibility="gone" />

    </GridLayout>

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="@string/settings_cd"
        android:paddingEnd="@dimen/corner_icon_padding"
        android:paddingBottom="20dp"
        android:src="@drawable/ic_settings"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/infoButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="?colorPrimary"
        tools:ignore="RtlSymmetry" />


    <ImageButton
        android:id="@+id/infoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="@string/info_cd"
        android:paddingEnd="@dimen/corner_icon_padding"
        android:paddingBottom="@dimen/corner_icon_padding"
        android:src="@drawable/ic_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="?colorPrimary"
        tools:ignore="RtlSymmetry" />

</androidx.constraintlayout.widget.ConstraintLayout>
