...
    <string name="shuffle_computation">Shuffle Computation</string>
    <string name="shuffle_numbers">Shuffle Numbers</string>
    <string name="shuffle_operators">Shuffle Operators</string>
    <string name="standard_function">Use Standard Calculator Function</string>

    <!-- Attributions -->
    <string name="title_attributions">Image Attributions</string>
    <string name="flaticon_message">All icons are taken from Flaticon, which allows free use of icons for personal and commercial purposes with attribution. In accordance with their policies, attributions are provided below.\n\nSee here for more information about their policies.</string>
    <string name="flaticon_message_short">All icons are taken from Flaticon. Expand for details of their attribution policies.</string>
    <string name="author_attr_template">Icon made by %s from %s</string>
    <string name="expand">Expand</string>
    <string name="collapse">Collapse</string>

    <!-- History -->
    <string name="title_history">Computation History</string>
    <string name="no_history">No history</string>
    <string name="history_error">Error retrieving history</string>

    <!-- Content Descriptions -->
    <string name="backspace_cd">Backspace</string>
    <string name="chevron_down_cd">Down chevron</string>
...
